--- a/package.json
+++ b/package.json
@@ -3,16 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "engines": {
-    "node": ">=14.15.0"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "start-client": "npm start --prefix client",
-    "develop": "concurrently   -n 'server,client' -c 'red,blue' \"npm run server\"   \"npm run start-client\"  "
-    
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -29,9 +22,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-validator": "^6.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.6"
+    "mongoose": "^5.11.6",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
